fixes overflow

--- a/_sass/blog/_md-content.scss
+++ b/_sass/blog/_md-content.scss
@@ -15,4 +15,5 @@
 	@extend .content;
 	@extend .git-box;
 	@extend .git-box--medium;
+	display: inline-block;
 }
